--- a/views/newpost.ejs
+++ b/views/newpost.ejs
@@ -9,17 +9,18 @@
 </head>
 <body>
     <h1>Create a New Post</h1>
-    <form action="/newpost" method="POST">
-        <div>
+    <form action="/newpost" method="POST" enctype="multipart/form-data">
         <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required><br>
-        <h4>Content:</h4>   
+        <input type="text" id="title" name="title" required>
+        <br>
+        <h4>Content:</h4>
         <textarea id="content" name="content" required></textarea>
-        </div>
-        <div>
+        <br>
+        <label for="image">Upload Image:</label>
+        <input type="file" id="image" name="image" accept="image/*">
+        <br>
         <button type="submit">Publish Post</button>
         <a href="/">Back to Home</a>
-        </div>
     </form>
 </body>
 </html>
