--- a/public/css/post.css
+++ b/public/css/post.css
@@ -1,3 +1,7 @@
+*{
+    margin:0;
+    padding: 0;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
@@ -50,6 +54,10 @@ input{
 input[type="text"]{
     font-size: 30px;
     padding-left: 2px;
+}
+input[type="file"]{
+    font-size: 18px;
+    padding-left: 5px;
 }
 textarea{
     height: 400px;
