--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,21 +31,39 @@ ul {
     justify-content: space-between;
 }
 
-.card {
-    width: calc(33.33% - 20px);
-    margin: 20px;
-    padding: 10px;
-    border: 1px solid #cccccc;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
-    transition: transform 0.3s;
-    color: #ccc;
-    overflow:auto;
+.card-container {
+    display: flex;
+    flex-wrap:wrap;
+    gap: 20px;
+    margin-top: 20px;
 }
 
+.card {
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    overflow:auto;
+    transition: transform 0.3s;
+}
 .card:hover {
     transform: scale(1.05);
+    background-color: rgba(255, 255, 255, 0.749);
+    border: 1px solid #000;
+    box-shadow: 2px 2px 18px rgba(0, 0, 0, 0.5);
+}
+.card img {
+    height: 280px;
+    width: 100%;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.card h2 {
+    color: #333;
+    margin-bottom: 10px;
 }
 
 li {
