--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,14 @@
 <body>
     <h1>Welcome to the Blog!</h1>
     <a href="/newpost">Create a New Post</a>
-    <ul>
+    <div class="card-container">
         <% posts.forEach(post => { %>
-            <li class="card">
+            <div class="card">
+                <img src="/uploads/<%= post.image %>" alt="<%= post.title %> Image">
                 <h2><%= post.title %></h2>
                 <p><%= post.content %></p>
-            </li>
-        <% }); %>
-    </ul>
+            </div>
+        <% }) %>
+    </div>
 </body>
 </html>
