--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,26 @@
     <title>Blog</title>
 </head>
 <body>
+    <nav>
+        <a href="/">Home</a>
+        <a href="#">Contact</a>
+        <a href="#">Blogs</a>
+        <a href="#">About</a>
+    </nav>
     <h1>Welcome to the Blog!</h1>
-    <a href="/newpost">Create a New Post</a>
+    <% if (typeof userLoggedIn === 'undefined' || !userLoggedIn) { %>
+        <div id="nps"><a href="/login">Login/Signup</a></div>
+    <% } else { %>
+        <div id="nps"><a href="/newpost" class="screen">Create a New Post</a></div>
+    <% } %>
     <div class="card-container">
         <% posts.forEach(post => { %>
             <div class="card">
-                <img src="/uploads/<%= post.image %>" alt="<%= post.title %> Image">
+                <% if (post.image) { %>
+                    <img src="/uploads/<%= post.image %>" alt="blogImage" class="userImage">
+                <% } else { %>
+                    <img src="/img/alt.png" alt="Default Image" class="userImage">
+                <% } %>
                 <h2><%= post.title %></h2>
                 <p><%= post.content %></p>
             </div>
