--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,9 @@ h1 {
     text-align: center;
 }
 #nps{
+    text-align: center;
+}
+#nps a{
     border: 1px solid #fff;
     padding: 10px;
     text-decoration: none;
@@ -22,8 +25,6 @@ h1 {
     border-radius: 10px;
     font-size: 25px;
     transition: 0.3s ease;
-    text-align: center;
-    margin: 0 600px;
 }
 .screen{
     text-decoration: none;
@@ -50,7 +51,7 @@ nav a:hover{
     border-radius: 8px;
 }
 
-#nps:hover{
+#nps a:hover{
     background-color: #2568FB;
 }
 ul {
@@ -66,10 +67,11 @@ ul {
     flex-wrap:wrap;
     gap: 20px;
     margin-top: 20px;
+    
 }
 
 .card {
-    width: 300px;
+    width: 400px;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -77,6 +79,7 @@ ul {
     margin: 10px;
     overflow:auto;
     transition: transform 0.3s;
+    height: 400px;
 }
 .card:hover {
     transform: scale(1.05);
@@ -98,5 +101,4 @@ ul {
 
 li {
     margin-bottom: 20px;
-    
 }
